<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- Actions -->
	<string name="label_home">Home</string>
	<string name="label_settings">Settings</string>
	<string name="label_move">Move</string>
	<string name="label_refresh">Refresh</string>
	<string name="label_contact">Contact us</string>
	<string name="label_logout">Logout</string>

	<!-- Buttons -->
	<string name="save_button">Save</string>
	<string name="ok_button">OK</string>
	<string name="cancel_button">Cancel</string>

	<!-- Wait dialog -->
	<string name="wait_title">Wait!</string>
	<string name="starting_app">Waking up the pig…</string>
	<string name="wait_text">Calling the Pig&#8230;</string>

	<!-- Login -->
	<string name="email">e-mail</string>
	<string name="password">password</string>
	<string name="login">login</string>

	<!-- Accounts -->
	<string name="title_activity_accounts">Accounts</string>
	<string name="no_accounts">There is no accounts</string>

	<!-- Reports -->
	<string name="title_activity_extract">Extract</string>
	<string name="title_activity_summary">Year summary</string>
	<string name="no_extract">There is no moves for this month</string>
	<string name="no_summary">There is no moves for this year</string>
	<string name="change_date">change</string>
	<string name="sure_to_delete">Do you really want to DELETE Move \'%s\'?"</string>
	<string name="edit">edit</string>
	<string name="delete">delete</string>
	<string name="check">check</string>
	<string name="uncheck">uncheck</string>

	<!-- Move -->
	<string name="title_activity_move">Move</string>
	<string name="description">description</string>
	<string name="date">date</string>
	<string name="category">category</string>
	<string name="account">account</string>
	<string name="value">value</string>
	<string name="conversion">conversion</string>
	<string name="conversion_abbreviation">convers.</string>
	<string name="amount">qty</string>
	<string name="use_detailed">go to detailed</string>
	<string name="use_simple">back to single value</string>
	<string name="add_detail">+</string>
	<string name="remove_detail">–</string>
	<string name="fill_all">Fill all fields to add a detail.</string>
	<string name="account_in">account in</string>
	<string name="account_out">account out</string>
	<string name="no_accounts_move">
		There are no accounts.\nWithout accounts, you cannot create Moves.
	</string>
	<string name="no_categories_move">
		There is no categories.\nYou can create a Move without Category,
		but you need to go to Settings and disable categories use.
	</string>
	<string name="losingCategory">
		This move has a category originally, but the Categories use are disabled.\n
		The category will be lost if you edit this move.
	</string>
	<string name="removingCheck">
		This move is marked as checked.\n
		When you save this move, the check will be removed.
	</string>
	<string name="out">out</string>
	<string name="OUT">OUT</string>
	<string name="transfer">transfer</string>
	<string name="TRANSFER">TRANSFER</string>
	<string name="in">in</string>
	<string name="IN">IN</string>

	<!-- Settings -->
	<string name="title_activity_settings">Settings</string>
	<string name="settings_warning">This settings applies to mobile and web</string>
	<string name="use_categories">Use categories</string>
	<string name="settings_saved">Settings applied!</string>
	<string name="move_check">Move can be checked / unchecked</string>
	<string name="verify">verify</string>
	<string name="two_factor_code">two factor code</string>
	<string name="long_click_warning">hold for a while to execute the action</string>
	<string name="site">Site</string>
	<string name="version">App Version</string>
	<string name="error_call_api">Error on calling the site, contact us</string>
	<string name="density">Device screen type</string>
	<string name="fail_at_offline_insert">try to insert the move again</string>
	<string name="sign_up">Sign Up</string>
	<string name="go_to_sign_up">To sign up an account you need to go to the site. Click \"OK\" and we will open the page for you.</string>
	<string name="update_cache">update accounts and categories</string>
	<string name="wipe_title">Remove My Data</string>
	<string name="wipe_explanation">"Here you can ask the removal of your data from the system.\n\nAfter that, this is not possible to login at the system anymore.\n\nThe permanent removal will take effect in a period of 24 hours.\n\nThere is no way to recover your data after the removal.\n\nIf you really want to proceed, type your password below and press the button."</string>
	<string name="title_activity_terms">Terms of Use</string>
	<string name="effective_date">effective date: %1$s</string>
    <string name="accept_terms">I understood and agree with the Terms of Use</string>
	<string name="remove_tfa">Remove Safer Login</string>
	<string name="remove_tfa_check_email">You will receive an e-mail with instructions to remove the Safer Login</string>
	<string name="remove_tfa_open">I don\'t have the code</string>
	<string name="back">back</string>
	<string name="tfa_forgotten_warning_what">Safer Login disabled via token</string>
	<string name="tfa_forgotten_warning_but">If this was not your action,</string>
	<string name="tfa_forgotten_warning_action">we recommend re-enable via Website.</string>
	<string name="add_detail_limit">Cannot add more details, System limit is %d</string>
</resources>
