<com.darakeon.dfm.lib.ui.SwipeRefresh
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".moves.MovesActivity"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>
	<LinearLayout
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		>

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/update_cache"
			android:onClick="updateCache"
			android:gravity="end|top"
			style="@style/Link" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:visibility="gone"
			android:orientation="vertical"
			android:id="@+id/warnings"
			>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/no_accounts"
				android:text="@string/no_accounts_move"
				android:visibility="gone"
				android:textSize="20sp"
				android:gravity="top|center"
				android:paddingBottom="20sp"
				/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/no_categories"
				android:text="@string/no_categories_move"
				android:visibility="gone"
				android:textSize="20sp"
				android:gravity="top|center"
				/>

		</LinearLayout>

		<ScrollView
			android:id="@+id/form"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			>

			<GridLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:columnCount="8"
				>

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/remove_check"
					android:text="@string/removingCheck"
					android:visibility="gone"
					android:layout_columnSpan="8"
					android:gravity="top|center"
					/>

				<EditText
					android:id="@+id/description"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_columnSpan="8"
					android:layout_marginBottom="@dimen/margin_move_field"
					android:inputType="text"
					android:hint="@string/description"
					android:autofillHints="description"
					android:nextFocusDown="@id/date"
					/>

				<EditText
					android:id="@+id/date"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_columnSpan="3"
					android:layout_columnWeight="3"
					android:layout_marginBottom="@dimen/margin_move_field"
					android:inputType="date"
					android:hint="@string/date"
					android:autofillHints="date"
					android:nextFocusDown="@id/category"
					/>

				<Button
					android:text="@string/glyph_calendar"
					android:textSize="@dimen/mini_button_font"
					android:id="@+id/date_picker"
					android:layout_width="0dp"
					android:layout_height="@dimen/mini_button_height"
					android:layout_columnSpan="1"
					android:layout_columnWeight="1"
					android:layout_margin="@dimen/button_margin"
					android:layout_marginBottom="@dimen/margin_move_field"
					/>

				<AutoCompleteTextView
					android:id="@+id/category"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_columnSpan="3"
					android:layout_columnWeight="3"
					android:layout_marginBottom="@dimen/margin_move_field"
					android:hint="@string/category"
					android:inputType="textAutoComplete"
					android:nextFocusDown="@id/account_out"
					android:imeOptions="actionNext"
					/>

				<Button
					android:text="@string/glyph_picker"
					android:textSize="@dimen/mini_button_font"
					android:id="@+id/category_picker"
					android:layout_width="0dp"
					android:layout_height="@dimen/mini_button_height"
					android:layout_columnSpan="1"
					android:layout_columnWeight="1"
					android:layout_margin="@dimen/button_margin"
					android:layout_marginBottom="@dimen/margin_move_field"
					/>

				<AutoCompleteTextView
					android:id="@+id/account_out"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_columnSpan="3"
					android:layout_columnWeight="3"
					android:hint="@string/account_out"
					android:inputType="textAutoComplete"
					android:nextFocusDown="@id/account_in"
					android:imeOptions="actionNext"
					/>

				<Button
					android:text="@string/glyph_picker"
					android:textSize="@dimen/mini_button_font"
					android:id="@+id/account_out_picker"
					android:layout_width="0dp"
					android:layout_height="@dimen/mini_button_height"
					android:layout_columnSpan="1"
					android:layout_columnWeight="1"
					android:layout_margin="@dimen/button_margin"
					/>

				<ToggleButton
					android:id="@+id/nature_out"
					android:layout_width="0dp"
					android:layout_height="@dimen/mini_button_height"
					android:layout_columnWeight="2"
					android:layout_columnSpan="2"
					android:clickable="false"
					android:textSize="@dimen/mini_button_font"
					android:textOff="@string/out"
					android:textOn="@string/OUT"
					android:backgroundTint="@android:color/transparent"
					/>

				<ToggleButton
					android:id="@+id/nature_in"
					android:layout_width="0dp"
					android:layout_height="@dimen/mini_button_height"
					android:layout_columnWeight="2"
					android:layout_columnSpan="2"
					android:clickable="false"
					android:textSize="@dimen/mini_button_font"
					android:textOff="@string/in"
					android:textOn="@string/IN"
					android:backgroundTint="@android:color/transparent"
					/>

				<AutoCompleteTextView
					android:id="@+id/account_in"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_columnSpan="3"
					android:layout_columnWeight="3"
					android:hint="@string/account_in"
					android:inputType="textAutoComplete"
					android:nextFocusDown="@id/value"
					android:imeOptions="actionNext"
					/>

				<Button
					android:text="@string/glyph_picker"
					android:textSize="@dimen/mini_button_font"
					android:id="@+id/account_in_picker"
					android:layout_width="0dp"
					android:layout_height="@dimen/mini_button_height"
					android:layout_columnSpan="1"
					android:layout_columnWeight="1"
					android:layout_margin="@dimen/button_margin"
					/>

				<ToggleButton
					android:id="@+id/nature_transfer"
					android:layout_width="0dp"
					android:layout_height="@dimen/mini_button_height"
					android:layout_columnWeight="4"
					android:layout_columnSpan="4"
					android:layout_marginBottom="@dimen/margin_move_field"
					android:clickable="false"
					android:textSize="@dimen/mini_button_font"
					android:textOff="@string/transfer"
					android:textOn="@string/TRANSFER"
					android:backgroundTint="@android:color/transparent"
					/>

				<LinearLayout
					android:id="@+id/simple_value"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_columnSpan="8"
					android:layout_marginBottom="@dimen/margin_move_field"
					android:orientation="horizontal"
					>

					<EditText
						android:id="@+id/value"
						android:layout_width="0dp"
						android:layout_weight="1"
						android:layout_height="wrap_content"
						android:inputType="numberDecimal"
						android:digits="0123456789,."
						android:hint="@string/value"
						android:autofillHints="value"
						android:imeOptions="actionDone"
						/>

					<Button
						android:text="@string/use_detailed"
						android:textSize="@dimen/mini_button_font"
						android:layout_width="wrap_content"
						android:layout_height="@dimen/mini_button_height"
						android:layout_margin="@dimen/button_margin"
						android:onClick="useDetailed"
						/>

				</LinearLayout>

				<GridLayout
					android:id="@+id/detailed_value"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/margin_move_field"
					android:columnCount="4"
					android:layout_columnSpan="8"
					android:visibility="gone"
					>

					<Button
						android:text="@string/use_simple"
						android:textSize="@dimen/mini_button_font"
						android:layout_width="match_parent"
						android:layout_height="@dimen/mini_button_height"
						android:layout_columnSpan="4"
						android:layout_margin="@dimen/button_margin"
						android:onClick="useSimple"
						/>

					<EditText
						android:id="@+id/detail_description"
						android:textSize="14sp"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_columnSpan="1"
						android:layout_columnWeight="9"
						android:inputType="text"
						android:hint="@string/description"
						android:autofillHints="description"
						android:nextFocusDown="@id/detail_amount"
						/>
					<EditText
						android:id="@+id/detail_amount"
						android:textSize="14sp"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_columnWeight="3"
						android:inputType="number"
						android:hint="@string/amount"
						android:autofillHints="amount"
						android:nextFocusDown="@id/detail_value"
						/>
					<EditText
						android:id="@+id/detail_value"
						android:textSize="14sp"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_columnWeight="6"
						android:inputType="numberDecimal"
						android:digits="0123456789,."
						android:hint="@string/value"
						android:autofillHints="value"
						android:imeOptions="actionDone"
						/>
					<Button
						android:text="@string/add_detail"
						android:textSize="@dimen/mini_button_font"
						android:layout_width="0dp"
						android:layout_height="@dimen/mini_button_height"
						android:layout_columnWeight="2"
						android:layout_margin="@dimen/button_margin"
						android:onClick="addDetail"
						/>

					<LinearLayout
						android:id="@+id/details"
						android:orientation="vertical"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_columnSpan="4"
						android:layout_margin="@dimen/button_margin"
						>
					</LinearLayout>

				</GridLayout>

				<Button
					android:text="@string/cancel_button"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_columnWeight="4"
					android:layout_columnSpan="4"
					android:layout_margin="@dimen/button_margin"
					android:onClick="cancel"
					/>

				<Button
					android:text="@string/save_button"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_columnWeight="4"
					android:layout_columnSpan="4"
					android:layout_margin="@dimen/button_margin"
					android:onClick="save"
					/>

			</GridLayout>
		</ScrollView>

		<include layout="@layout/bottom_menu"
			android:id="@+id/bottom_menu" />
	</LinearLayout>
</com.darakeon.dfm.lib.ui.SwipeRefresh>
